# context-tracer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
env/: README.md  env.yml  llmtrace.yml
env/frozen/: env_local.frozen.yml
notebooks/: contextvar.ipynb  example.ipynb  parse_log.ipynb  simple_test.ipynb  test.ipynb  test_import.ipynb
notebooks/llm_trace/: test_trace.ipynb
src/context_tracer/: __init__.py  constants.py  trace.py  trace_context.py  trace_types.py
src/context_tracer/concurrency/: __init__.py  context_propagation.py  patch_concurrency.py  trace_propagation.py
src/context_tracer/trace_implementations/: trace_basic.py
src/context_tracer/trace_implementations/trace_json_log/: __init__.py  parse_trace_json_log.py  trace_json_log.py  utils.py
src/context_tracer/tracing_export/: default_utils.py  tree_txt_repr.py
src/context_tracer/tracing_viewer/: load_templates.py  trace_with_server.py  tracer_with_view.py  view_server.py  view_server.py.bak
src/context_tracer/utils/: async_mp_queue.py  concurrency.py  dict_tools.py  fast_api_process_runner.py  func_utils.py  id_utils.py  json_encoder.py  logging_utils.py  merge_patch.py  pretty_printer.py  time_utils.py  types.py  url_utils.py
src/llmtrace/: datamodel.py  trace.py  utils.py
tests/: README.md  run_tests.sh
tests/context_tracer_test/: conftest.py  trace_context_test.py  trace_test.py  trace_types_test.py
tests/context_tracer_test/concurrency_test/: patch_concurreny_test.py  trace_propagation_test.py
tests/context_tracer_test/trace_implementations_test/: trace_basic_test.py  trace_json_log_test.py  trace_sqlite_test.py
tests/context_tracer_test/tracing_export_test/: flamechart_html_repr_test.py  tree_html_repr_test.py  tree_txt_repr_test.py
tests/context_tracer_test/tracing_viewer_test/: tracer_with_view_test.py
tests/context_tracer_test/utils_test/: async_mp_queue_test.py  concurrency_test.py  fast_api_process_runner_test.py  id_utils_test.py  merge_patch_test.py  types_test.py  url_utils_test.py
tools/: README.md  freeze_active_env.sh  run_all.sh  run_formatting.sh  run_linters.sh
(+31 files in other folders)
