[project]
name = "context-tracer"
description = "Python Context Tracer"
readme = "README.md"
version = "0.1.1"
license = {text = "Closed"}
classifiers = [
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
  "pydantic>2",
  "fastapi",
  "uvicorn",
  "uuid6",
  "websockets>=11",
  "requests",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
  "test/*",
  "tools/*",
  "env/*",
  "infra/*",
  "notebooks/*",
]

[tool.setuptools.package-data]
context_tracer = [
  "py.typed",
  "**/*.css",
  "**/*.js",
  "**/*.jinja",
  "**/*.html",
  "tracing_viewer/server_static/*",
  "tracing_viewer/templates/*",
]

[project.urls]
Source = "https://github.com/peterroelants/context-tracer/"


# Tool configuration ###############################################
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = [
  "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
extend-select = [
    "I001"  # isort
]
line-length = 88
ignore = [
  'E501',  # Line too long (E501)
  'E731',  # Do not assign a lambda expression, use a def (E731)
]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
]
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
