[metadata]
name = llm_logger
version = 0.0.1
description = LLM Logger
long_description = file: README.md
license = Closed
url = TODO
classifiers =
    Programming Language :: Python :: 3.11

[options]
packages=find:
package_dir=
    =src
include_package_data = True
python_requires = >=3.9, <4


[options.packages.find]
where=src
exclude=
    env/
    notebooks/
    tools/

[options.package_data]
python_project_template = py.typed

[options.extras_require]
dev =
    mypy
    pytest
